refactoring API, but celery binding was incomplete
